--- a/SampleProject.WebApp/Views/_ViewImports.cshtml
+++ b/SampleProject.WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using SampleProject.WebApp
 @using SampleProject.WebApp.Models
+@using SampleProject.WebApp.Models.VMs
+@using SampleProject.WebApp.Models.DTOs
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
