--- a/SampleProject.WebApp/Areas/Member/Views/Article/List.cshtml
+++ b/SampleProject.WebApp/Areas/Member/Views/Article/List.cshtml
@@ -3,7 +3,7 @@
 
 <div class="card col-md-12">
     <div class="card-header">
-        <h3 class="card-title">Article List</h3>
+        <h3 class="card-title"> Makale Listesi </h3>
     </div>
     <!-- /.card-header -->
     <div class="card-body p-0">
@@ -11,12 +11,12 @@
             <thead>
                 <tr>
 
-                    <th>Title</th>
-                    <th> Image </th>
-                    <th>CategoryName</th>
-                    <th>User FullName</th>
+                    <th> Başlık </th>
+                    <th> Fotoğraf </th>
+                    <th> Kategori Adı</th>
+                    <th> Ad Soyad </th>
 
-                    <th>Operations</th>
+                    <th> İşlemler </th>
 
                 </tr>
             </thead>
