--- a/SampleProject.WebApp/Areas/Member/Views/Category/List.cshtml
+++ b/SampleProject.WebApp/Areas/Member/Views/Category/List.cshtml
@@ -11,8 +11,8 @@
             <thead>
                 <tr>
 
-                    <th>Category Name</th>
-                    <th> Operations </th>
+                    <th> Kategori Adı </th>
+                    <th> İşlemler </th>
 
                 </tr>
             </thead>
