--- a/SampleProject.WebApp/Areas/Admin/Views/_ViewImports.cshtml
+++ b/SampleProject.WebApp/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using SampleProject.Entities.Concrete;
 @using SampleProject.WebApp.Areas.Member.Models.VMs;
 @using SampleProject.WebApp.Areas.Member.Models.DTOs;
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
