--- a/SampleProject.WebApp/Areas/Member/Views/AppUser/Update.cshtml
+++ b/SampleProject.WebApp/Areas/Member/Views/AppUser/Update.cshtml
@@ -1,56 +1,70 @@
 ﻿@model UserUpdateVM
 
 
-<div class="container">
-    <h3>Update Profile</h3>
-
-    <form asp-action="Update" method="post" enctype="multipart/form-data">
 
 
 
-        <div class="form-group">
-            <input asp-for="ID" type="hidden" />
-            <input asp-for="IdentityId" type="hidden" />
+
+
+<div class="content-wrapper d-flex align-items-center auth">
+
+
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <h3>Profili Güncelle</h3>
+                <form class="forms-sample" asp-action="Update" method="post" enctype="multipart/form-data">
+
+
+
+                    <div class="form-group">
+                        <input asp-for="ID" type="hidden" />
+                        <input asp-for="IdentityId" type="hidden" />
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="FirstName"></label>
+                        <input type="text" class="form-control" asp-for="FirstName" />
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="LastName"></label>
+                        <input type="text" class="form-control" asp-for="LastName" />
+                        <span asp-validation-for="LastName" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="UserName"></label>
+                        <input type="text" class="form-control" asp-for="UserName" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Password"></label>
+                        <input type="password" class="form-control" asp-for="Password" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="ImagePath"></label>
+                        <input type="file" class="form-control" asp-for="ImagePath" />
+                        <span class="text-danger" asp-validation-for="ImagePath"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Mail"></label>
+                        <input type="email" class="form-control" asp-for="Mail" />
+                        <span asp-validation-for="Mail" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-gradient-primary mr-2">GÜNCELLE </button>
+                    </div>
+                </form>
+            </div>
         </div>
+    </div>
 
-        <div class="form-group">
-            <label asp-for="FirstName"></label>
-            <input type="text" class="form-control" asp-for="FirstName" />
-            <span asp-validation-for="FirstName" class="text-danger"></span>
-        </div>
 
-        <div class="form-group">
-            <label asp-for="LastName"></label>
-            <input type="text" class="form-control" asp-for="LastName" />
-            <span asp-validation-for="LastName" class="text-danger"></span>
-        </div>
-
-        <div class="form-group">
-            <label asp-for="UserName"></label>
-            <input type="text" class="form-control" asp-for="UserName" />
-            <span asp-validation-for="UserName" class="text-danger"></span>
-        </div>
-
-        <div class="form-group">
-            <label asp-for="Password"></label>
-            <input type="password" class="form-control" asp-for="Password" />
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-
-        <div class="form-group">
-            <label asp-for="ImagePath"></label>
-            <input type="file" class="form-control" asp-for="ImagePath" />
-            <span class="text-danger" asp-validation-for="ImagePath"></span>
-        </div>
-
-        <div class="form-group">
-            <label asp-for="Mail"></label>
-            <input type="email" class="form-control" asp-for="Mail" />
-            <span asp-validation-for="Mail" class="text-danger"></span>
-        </div>
-
-        <div class="form-group">
-            <button type="submit" class="btn-success">GÜNCELLE !</button>
-        </div>
-    </form>
 </div>
