--- a/SampleProject.WebApp/Areas/Member/Views/Article/Update.cshtml
+++ b/SampleProject.WebApp/Areas/Member/Views/Article/Update.cshtml
@@ -41,7 +41,7 @@
         </div>
 
         <div class="form-group">
-            <button type="submit" class="btn btn-success"> GÜNCELLE ! </button>
+            <button type="submit" class="btn btn-gradient-primary mr-2"> GÜNCELLE </button>
         </div>
 
     </form>
@@ -49,3 +49,5 @@
 
 
 </div>
+
+
