--- a/SampleProject.WebApp/Areas/Member/Views/Article/List.cshtml
+++ b/SampleProject.WebApp/Areas/Member/Views/Article/List.cshtml
@@ -1,42 +1,59 @@
 ﻿@model List<GetArticleVM>
 
+<div class="content-wrapper d-flex align-items-center auth">
 
-<div class="card col-md-12">
-    <div class="card-header">
-        <h3 class="card-title"> Makale Listesi </h3>
+
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+
+
+
+                <div class="card col-md-12">
+                    <div class="card-header">
+                        <h3 class="card-title"> Makale Listesi </h3>
+                    </div>
+                    <!-- /.card-header -->
+                    <div class="card-body p-0">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+
+                                    <th> Başlık </th>
+                                    <th> Fotoğraf </th>
+                                    <th> Kategori Adı</th>
+                                    <th> Ad Soyad </th>
+
+                                    <th> İşlemler </th>
+
+                                </tr>
+                            </thead>
+                            <tbody>
+
+                                @foreach (GetArticleVM item in Model)
+                                {
+                                    <tr>
+                                        <td>@item.Title</td>
+                                        <td><img src="@item.Image" /></td>
+                                        <td>@item.CategoryName</td>
+                                        <td>@item.FullName</td>
+
+                                        <td><a asp-action="Update" asp-route-id="@item.ArticleID" class="btn btn-success">Güncelle</a></td>
+                                        <td><a asp-action="Delete" asp-route-id="@item.ArticleID" class="btn btn-warning">Sil</a></td>
+                                        <td><a asp-action="Detail" asp-route-id="@item.ArticleID" class="btn btn-info">Detay</a></td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- /.card-body -->
+                </div>
+
+
+
+            </div>
+        </div>
     </div>
-    <!-- /.card-header -->
-    <div class="card-body p-0">
-        <table class="table table-striped">
-            <thead>
-                <tr>
 
-                    <th> Başlık </th>
-                    <th> Fotoğraf </th>
-                    <th> Kategori Adı</th>
-                    <th> Ad Soyad </th>
 
-                    <th> İşlemler </th>
-
-                </tr>
-            </thead>
-            <tbody>
-
-                @foreach (GetArticleVM item in Model)
-                {
-                    <tr>
-                        <td>@item.Title</td>
-                        <td><img src="@item.Image" /></td>
-                        <td>@item.CategoryName</td>
-                        <td>@item.FullName</td>
-
-                        <td><a asp-action="Update" asp-route-id="@item.ArticleID" class="btn btn-success">Güncelle</a></td>
-                        <td><a asp-action="Delete" asp-route-id="@item.ArticleID" class="btn btn-warning">Sil</a></td>
-                        <td><a asp-action="Detail" asp-route-id="@item.ArticleID" class="btn btn-info">Detay</a></td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-    <!-- /.card-body -->
 </div>
