--- a/SampleProject.WebApp/Areas/Member/Views/Article/Update.cshtml
+++ b/SampleProject.WebApp/Areas/Member/Views/Article/Update.cshtml
@@ -1,53 +1,83 @@
 ﻿@model ArticleUpdateVM
 
 
-<div class="container">
-    <h3>Article Update Panel</h3>
 
-    <form asp-action="Update" method="post" enctype="multipart/form-data">
-        <div class="form-group">
-            <input asp-for="ID" type="hidden" />
-            <input asp-for="AppUserID" type="hidden" />
+
+
+
+
+<div class="content-wrapper d-flex align-items-center auth">
+
+
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <div class="col-12 grid-margin stretch-card">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="col-12 grid-margin stretch-card">
+                                <div class="card">
+                                    <div class="card-body">
+
+                                        <div class="container">
+                                            <h3>Article Update Panel</h3>
+
+                                            <form asp-action="Update" method="post" enctype="multipart/form-data">
+                                                <div class="form-group">
+                                                    <input asp-for="ID" type="hidden" />
+                                                    <input asp-for="AppUserID" type="hidden" />
+                                                </div>
+
+                                                <div class="form-group">
+                                                    <label asp-for="Title"></label>
+                                                    <input type="text" class="form-control" asp-for="Title" />
+                                                    <span asp-validation-for="Title" class="text-danger"></span>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label asp-for="Content"></label>
+                                                    <textarea asp-for="Content" rows="20" cols="60"></textarea>
+                                                    <span asp-validation-for="Content" class="text-danger"></span>
+                                                </div>
+
+                                                <div class="form-group">
+                                                    <label asp-for="ImagePath"></label>
+                                                    <input type="file" class="form-control" asp-for="ImagePath" />
+                                                    <span class="text-danger" asp-validation-for="ImagePath"></span>
+                                                    <img src="@Model.Image" />
+                                                </div>
+
+                                                <div class="form-group">
+                                                    <label asp-for="CategoryId"></label>
+                                                    <select asp-for="CategoryId">
+                                                        @foreach (var item in Model.Categories)
+                                                        {
+                                                            <option value="@item.ID">@item.Name</option>
+                                                        }
+
+                                                    </select>
+                                                    <span asp-validation-for="CategoryId" class="text-danger"></span>
+                                                </div>
+
+                                                <div class="form-group">
+                                                    <button type="submit" class="btn btn-gradient-primary mr-2"> GÜNCELLE </button>
+                                                </div>
+
+                                            </form>
+
+
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div class="form-group">
-            <label asp-for="Title"></label>
-            <input type="text" class="form-control" asp-for="Title" />
-            <span asp-validation-for="Title" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Content"></label>
-            <textarea asp-for="Content" rows="20" cols="60"></textarea>
-            <span asp-validation-for="Content" class="text-danger"></span>
-        </div>
-
-        <div class="form-group">
-            <label asp-for="ImagePath"></label>
-            <input type="file" class="form-control" asp-for="ImagePath" />
-            <span class="text-danger" asp-validation-for="ImagePath"></span>
-            <img src="@Model.Image" />
-        </div>
-
-        <div class="form-group">
-            <label asp-for="CategoryId"></label>
-            <select asp-for="CategoryId">
-                @foreach (var item in Model.Categories)
-                {
-                    <option value="@item.ID">@item.Name</option>
-                }
-
-            </select>
-            <span asp-validation-for="CategoryId" class="text-danger"></span>
-        </div>
-
-        <div class="form-group">
-            <button type="submit" class="btn btn-gradient-primary mr-2"> GÜNCELLE </button>
-        </div>
-
-    </form>
-
+    </div>
 
 
 </div>
-
 
