--- a/SampleProject.WebApp/Areas/Member/Views/Category/Create.cshtml
+++ b/SampleProject.WebApp/Areas/Member/Views/Category/Create.cshtml
@@ -1,33 +1,53 @@
-﻿
+﻿@model CreateCategoryDTO
 
-@model CreateCategoryDTO
 
-<div class="container-fluid">
-    <div class="row">
-        <h4>CREATE CATEGORY PANEL</h4>
 
-        <form  asp-action="Create"  method="post">
-            <div class="form-group">
-                <label asp-for="Name"></label>
-                <input  asp-for="Name" type="text" class="form-control"/>
-                <span asp-validation-for="Name" class="text-danger"></span>
+
+
+
+<div class="content-wrapper d-flex align-items-center auth">
+
+
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <div class="col-12 grid-margin stretch-card">
+                    <div class="card">
+                        <div class="card-body">
+
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <h4>CREATE CATEGORY PANEL</h4>
+
+                                    <form asp-action="Create" method="post">
+                                        <div class="form-group">
+                                            <label asp-for="Name"></label>
+                                            <input asp-for="Name" type="text" class="form-control" />
+                                            <span asp-validation-for="Name" class="text-danger"></span>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label asp-for="Description"></label>
+                                            <input asp-for="Description" type="text" class="form-control" />
+                                            <span asp-validation-for="Description" class="text-danger"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <button class="btn btn-success" type="submit">  OLUŞTUR </button>
+                                        </div>
+
+                                    </form>
+
+
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <div class="form-group">
-                <label asp-for="Description"></label>
-                <input asp-for="Description" type="text" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <button  class="btn btn-success" type="submit" >  OLUŞTUR </button>
-            </div>
-
-        </form>
-
-        <div class="form-group">
-            <a asp-action="Index"  asp-controller="AppUser"  asp-area="Member" >Ana Sayfaya Dön</a>
         </div>
-
-
     </div>
+
+
 </div>
